--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My WDD130 Home Page</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+    <h1>Welcome to My WDD130 Home Page</h1>
+    <p>This is my first webpage for the WDD130 course.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <!-- Your image -->
+    <img src="images/myphoto.jpg" alt="smart gentleman" />
+
+    <p>Check out my <a href="https://github.com/your-wilsonamosmwebaze-maker/wdd130">GitHub Repository</a>.</p>
 </body>
 </html>
