Commit → Sync / Push

--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 130 | Personal Homepage</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>White Water Rafting</title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it
-        with your own personal details.</p>
 
-    <img src="images/myphoto.jpg" alt="The myphoto." />
+    <header>
+        <img src="images/logo.png" alt="Rafting site logo">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+        </nav>
+    </header>
 
-    <!-- Example: Add your personal info below -->
-    <h2>About Me</h2>
-    <p>Hi! I am Wilson, and this is my first webpage for the WDD130 course.</p>
-    <p>Check out my <a href="https://github.com/wilsonamosmwebaze-maker/wdd130"
-          target="_blank">GitHub Repository</a>.</p>
+    <main>
+        <h1>Welcome to White Water Rafting</h1>
+        <p>This site is under development.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 White Water Rafting</p>
+    </footer>
+
 </body>
 
 </html>
