--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,64 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-      content="About our white water rafting adventures, history, and mission.">
-    <meta name="author" content="Mwebaze Wilson">
     <title>About Us | White Water Rafting</title>
-
-    <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description"
+      content="Learn about our white water rafting adventures, history, and experiences.">
+    <link rel="stylesheet" href="rafting.css">
 </head>
 
 <body>
     <header>
         <img src="images/logo.png" alt="White Water Rafting Logo">
-
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
     <main>
-        <div class="hero">
-            <img src="images/hero.jpg" alt="Rafting adventure">
-
+        <section class="hero">
             <h1>White Water Rafting</h1>
+            <p>
+                We provide unforgettable rafting adventures through powerful rivers
+                and breathtaking landscapes. Our trained guides ensure safety,
+                excitement, and memories that last a lifetime.
+            </p>
+            <img src="images/hero.jpg" alt="Rafting adventure">
+        </section>
 
-            <article>
-                <img src="images/happy-client.jpg" alt="Happy client">
-                <p>
-                    Our mission is to provide thrilling and safe white water rafting
-                    adventures for families, friends, and explorers.
-                </p>
-            </article>
-        </div>
-
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>
-                Founded in adventure and passion, our rafting company has guided
-                explorers through unforgettable river experiences.
+                White Water Rafting was founded with a passion for adventure and nature.
+                For decades, we have guided thousands of thrill-seekers through some of
+                the most exciting rapids in the world.
+            </p>
+            <img src="images/rafting1.jpg" alt="Rafting history">
+            <p>
+                Our company continues to grow while maintaining a strong focus on safety,
+                environmental responsibility, and unforgettable experiences.
             </p>
         </section>
 
-        <section>
-            <h2>Adventure Awaits You!</h2>
+        <section class="adventures">
+            <h2>Adventure Awaits You</h2>
+
+            <figure>
+                <img src="images/rafting1.jpg" alt="Los Dientes del Diablo">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting2.jpg" alt="Big Mallard">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting4.jpg" alt="Rapid Rush">
+                <figcaption>Rapid Rush</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rafting5.jpg" alt="Extreme Rapids">
+                <figcaption>Extreme Rapids</figcaption>
+            </figure>
         </section>
     </main>
 
     <footer>
-        <p>© 2026 | White Water Rafting | Mwebaze Wilson</p>
-
-        <nav class="socialmedia">
+        <p>© 2026 White Water Rafting</p>
+        <div class="social">
             <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
             <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
             <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-        </nav>
+        </div>
     </footer>
 </body>
 
