Fix CSS path for about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <title>About Us | White Water Rafting</title>
     <meta name="description"
       content="Learn about our white water rafting adventures, history, and experiences.">
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
