Fix contact page layout and map

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,6 +3,10 @@
 
     <section class="contact-info">
       <h1>Contact Us</h1>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127666.91847204784!2d30.571898071231747!3d-0.611348703514159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19d91bb20d9cd3e3%3A0x883a0deaec00c519!2sMbarara!5e0!3m2!1sen!2sug!4v1770373593238!5m2!1sen!2sug"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
 
       <p><strong>White Water Rafting</strong></p>
       <p>123 River Road, Adventure City</p>
@@ -61,5 +65,4 @@
     </section>
 
   </main>
-
 </head>
