--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,7 +1,7 @@
 <head>
   <main class="contact">
 
-    <section class="contact-info">
+    < class="contact-info">
       <h1>Contact Us</h1>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127666.91847204784!2d30.571898071231747!3d-0.611348703514159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19d91bb20d9cd3e3%3A0x883a0deaec00c519!2sMbarara!5e0!3m2!1sen!2sug!4v1770373593238!5m2!1sen!2sug"
@@ -13,56 +13,51 @@
       <p>Phone: +256 700 000 000</p>
       <p>Email: info@whitewaterrafting.com</p>
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3..." loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </section>
+      <section class="contact-form">
+        <h2>Send Us a Message</h2>
 
-    <section class="contact-form">
-      <h2>Send Us a Message</h2>
+        <form>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required>
 
-      <form>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
 
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
+          <p>Purpose of Message</p>
+          <label><input type="radio" name="purpose"> General Inquiry</label>
+          <label><input type="radio" name="purpose"> Reservation Question</label>
+          <label><input type="radio" name="purpose"> Website Suggestion</label>
 
-        <p>Purpose of Message</p>
-        <label><input type="radio" name="purpose"> General Inquiry</label>
-        <label><input type="radio" name="purpose"> Reservation Question</label>
-        <label><input type="radio" name="purpose"> Website Suggestion</label>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" required></textarea>
 
-        <label for="message">Message</label>
-        <textarea id="message" name="message" required></textarea>
+          <label>
+            <input type="checkbox">
+            Please subscribe me to the monthly newsletter
+          </label>
 
-        <label>
-          <input type="checkbox">
-          Please subscribe me to the monthly newsletter
-        </label>
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
 
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
+      <section class="employees">
+        <h2>Meet Our Team</h2>
 
-    <section class="employees">
-      <h2>Meet Our Team</h2>
+        <figure>
+          <img src="images/rafting1.jpg" alt="River Guide">
+          <figcaption>John Doe – Senior River Guide</figcaption>
+        </figure>
 
-      <figure>
-        <img src="images/rafting1.jpg" alt="River Guide">
-        <figcaption>John Doe – Senior River Guide</figcaption>
-      </figure>
+        <figure>
+          <img src="images/rafting2.jpg" alt="Safety Officer">
+          <figcaption>Jane Smith – Safety Officer</figcaption>
+        </figure>
 
-      <figure>
-        <img src="images/rafting2.jpg" alt="Safety Officer">
-        <figcaption>Jane Smith – Safety Officer</figcaption>
-      </figure>
-
-      <figure>
-        <img src="images/rafting3.jpg" alt="Operations Manager">
-        <figcaption>Mike Brown – Operations Manager</figcaption>
-      </figure>
-    </section>
+        <figure>
+          <img src="images/rafting3.jpg" alt="Operations Manager">
+          <figcaption>Mike Brown – Operations Manager</figcaption>
+        </figure>
+      </section>
 
   </main>
 </head>
